# parsley_api_v2

./: .gitignore  Cargo.toml  README.md
migrations/: 0001_chef_recipe_tables.sql  0002_update_mtime_drop_mid.sql  0003_recipe_add_serving_col.sql
src/: main.rs
src/_tests/: model_recipe.rs
src/auth/: mod.rs
src/db/: error.rs  mod.rs
src/models/: chef.rs  error.rs  mod.rs  recipe.rs
src/recipe_scraper/: mod.rs
src/routes/: mod.rs
web-folder/: index.html
